<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/default_padding"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_route"
        />
    <TableLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/my_location_row">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/my_location"
                />
            <RadioButton
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:checked="true"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/start_point"
                />
            <RadioButton
                android:id="@+id/start_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/location_entry"
                android:layout_height="wrap_content"
                android:hint="@string/start_point">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/end_point"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/location_entry"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_point">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>